# dontdelete-ai

./: .gitignore  CNAME  HANDOFF.md  IDENTITY.md  JINX-FACTOR-MODEL-SPEC.md  MEMORY.md  TOOLS.md  USER.md  check-disk.ps1  checksteam.ps1  cleanup.ps1  cleanup2.ps1  cleanup3.ps1  docx-to-html.py  feed.json  find_post.py  index.html  jinx-factor-model.ts  mission-control.html  mma-astrology-context.md  mma-astrology-oracle-transcript.md  mma-astrology-standalone.html  moltbook_intro.py  moltbook_reply.py  oracle-context-feb16.md  package-lock.json  package.json  post_moltbook.py  send_eth.py  skills-scan-results-v2.json  skills-scan-results.json  strategy_state.jsonl  temp-grok-test.json  test_erc8004.py  tmp_post.js  tmp_post.json  verify_comment.py  verify_intro.py
.clawdhub/: lock.json
.clawhub/: lock.json
academy/: .gitignore  CONSORTIUM-CODE.md  EPISODE-GUIDE.md  PAPER-TRADING-ENGINE.md  RUNBOOK.md  SOULS-V2.md  WEEK-1-2-BUILD-SPEC.md  check-names.py  check-tsk.py  package-lock.json  package.json  register-agents.py  register-tsk.py
academy-app/: .env.example  README.md  package.json  tailwind.config.ts
bot-challenge/: README.md  SURGEON-ROADMAP.md  package-lock.json  package.json  paper-ledger.json  tsconfig.json
clown-trader/: ARCHITECTURE.md
digitalyuan/: mbridge_agent_v2_1.md  mbridge_agent_v2_2.md  sendbridge_amlctf_program.md  sendbridge_launch_plan.md
docs/: research-library.md
hyperliquid-bot/: requirements.txt
loris-results/: ALTCOIN-REPORT.md  REPORT.md  STOP-LOSS-REPORT.md  analysis.json  (+19 more)
molt-cops/moltshield/: CONTRIBUTING.md  LICENSE  README.md  __init__.py  analyze_results.py  pyproject.toml  run_tests.py
molt-cops/moltshield/.github/workflows/: ci.yml  publish.yml
molt-cops/moltshield/moltshield/: __init__.py
molt-cops/moltshield/scanner/: __init__.py  cli.py  core.py  rules.py
molt-cops/moltshield/tests/corpus/clean-calculator/: SKILL.md
molt-cops/moltshield/tests/corpus/sketchy-shell-helper/: shell.py
(+709 files in other folders)
