[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moltshield"
version = "0.1.0"
description = "Security scanner for AI agent skills - Defend your agents from malicious moltbooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MoltShield Team" }
]
keywords = [
    "security",
    "ai-agents",
    "llm",
    "scanning",
    "vulnerability",
    "openclaw",
    "claude",
    "mcp",
    "skills",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
moltshield = "moltshield.scanner.cli:main"

[project.urls]
Homepage = "https://github.com/moltshield/moltshield"
Documentation = "https://github.com/moltshield/moltshield#readme"
Repository = "https://github.com/moltshield/moltshield"
Issues = "https://github.com/moltshield/moltshield/issues"

[tool.hatch.build.targets.wheel]
packages = ["moltshield"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
